--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
 	</properties>
 	<dependencies>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.github.bastiaanjansen</groupId>
@@ -198,6 +204,14 @@
 
     <profiles>
         <profile>
+            <id>test</id>
+            <properties>
+                <spring-boot.run.profiles>test</spring-boot.run.profiles>
+                <spring.profiles.active>test</spring.profiles.active>
+                <flyway.enabled>false</flyway.enabled>
+            </properties>
+        </profile>
+        <profile>
             <id>local</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -212,7 +226,6 @@
             <properties>
                 <spring-boot.run.profiles>dev</spring-boot.run.profiles>
                 <spring.profiles.active>dev</spring.profiles.active>
-                <flyway.enabled>false</flyway.enabled>
             </properties>
         </profile>
         <profile>
@@ -257,6 +270,21 @@
 				</configuration>
 
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
+                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.1.2</version>
+            </plugin>
+
 		</plugins>
 	</build>
 
