--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,16 @@ spring:
   application:
     name: ${APP_NAME:my-app}
 
+  config:
+    activate:
+      on-profile: dev,local,prod
+
   output:
     ansi:
       enabled: always
+
+  flyway:
+    enabled: false
 
   datasource:
     url: ${DATABASE_URL}
@@ -75,6 +82,7 @@ spring:
   totp:
     global-secret: ${TOTP_GLOBAL_SECRET}
     expiration-in-minutes: ${TOTP_EXPIRY_IN_MINUTES:5}
+
 
 bucket4j:
   enabled: true
