--- a/pom.xml
+++ b/pom.xml
@@ -196,11 +196,17 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <profiles>
         <profile>
@@ -209,6 +215,7 @@
                 <spring-boot.run.profiles>test</spring-boot.run.profiles>
                 <spring.profiles.active>test</spring.profiles.active>
                 <flyway.enabled>false</flyway.enabled>
+                <bucket4j.enabled>false</bucket4j.enabled>
             </properties>
         </profile>
         <profile>
