--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -61,19 +61,9 @@ spring:
       success-url: https://localhost:8080/api/v1/webhook/payment
       failure-url: https://localhost:8080/api/v1/webhook/payment
 
-  jackson:
-    property-naming-strategy: SNAKE_CASE
 
   cache:
     type: none
-
-#  data:
-#    redis:
-#      host: localhost
-#      database: 0
-#      port: 6379
-#      repositories:
-#        enabled: false
 
   mailtrap:
     token: dummy-mailtrap-token
@@ -86,6 +76,11 @@ spring:
     global-secret: dummy-global-secret
     expiration-in-minutes: 5
 
+  autoconfigure:
+    exclude:
+      - org.redisson.spring.starter.RedissonAutoConfigurationV2
+
+
 bucket4j:
   enabled: false
 
@@ -94,6 +89,7 @@ springdoc:
     enabled: false
   swagger-ui:
     enabled: false
+
 
 logging:
   level:
