chore(ci/cd): trigger CD only after successful CI on main

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,12 +6,6 @@ on:
     types:
       - completed
 
-env:
-  AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-  AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-  AWS_S3_REGION: ${{ secrets.AWS_S3_REGION }}
-  AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-
 jobs:
   create-env:
     name: Setup Environment
@@ -19,20 +13,54 @@ jobs:
     environment: ${{ vars.ENV }}
     steps:
       - uses: actions/checkout@v4
-      - name: Create .env.${{ vars.SPRING_PROFILES_ACTIVE }}
+      - name: Create .env.${{ vars.ENV }} file
         run: |
-          cat <<EOF > .env.${{ vars.SPRING_PROFILES_ACTIVE }}
+          cat <<EOF > .env.${{ vars.ENV }}
           SPRING_PROFILES_ACTIVE=${{ vars.SPRING_PROFILES_ACTIVE }}
+          APP_PORT=${{ vars.APP_PORT }}
+          APP_NAME=${{ vars.APP_NAME }}
+
           POSTGRES_DB=${{ vars.POSTGRES_DB }}
           POSTGRES_USER=${{ vars.POSTGRES_USER }}
           POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-          ...
+          POSTGRES_PORT=${{ vars.POSTGRES_PORT }}
+          DATABASE_URL=${{ vars.DATABASE_URL }}
+
+          JWT_ACCESS_SECRET=${{ secrets.JWT_ACCESS_SECRET }}
+          JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }}
+          JWT_ACCESS_EXPIRATION_IN_MINUTES=${{ vars.JWT_ACCESS_EXPIRATION_IN_MINUTES }}
+          JWT_REFRESH_EXPIRATION_IN_DAYS=${{ vars.JWT_REFRESH_EXPIRATION_IN_DAYS }}
+
+          AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }}
+          AWS_S3_REGION=${{ vars.AWS_S3_REGION }}
+          AWS_S3_BUCKET=${{ vars.AWS_S3_BUCKET }}
+
+          XENDIT_SECRET_KEY=${{ secrets.XENDIT_SECRET_KEY }}
+          XENDIT_VERIFICATION_TOKEN=${{ secrets.XENDIT_VERIFICATION_TOKEN }}
+          XENDIT_SUCCESS_URL=${{ vars.XENDIT_SUCCESS_URL }}
+          XENDIT_FAILURE_URL=${{ vars.XENDIT_FAILURE_URL }}
+
+          REDIS_HOST=${{ vars.REDIS_HOST }}
+          REDIS_PORT=${{ vars.REDIS_PORT }}
+          REDIS_DB=${{ vars.REDIS_DB }}
+          REDIS_KEY_PREFIX=${{ vars.REDIS_KEY_PREFIX }}
+          REDIS_ADDRESS=${{ vars.REDIS_ADDRESS }}
+
+          MAILTRAP_TOKEN=${{ secrets.MAILTRAP_TOKEN }}
+          MAILTRAP_SENDER_EMAIL=${{ secrets.MAILTRAP_SENDER_EMAIL }}
+          MAILTRAP_TEMPLATE_VERIFICATION_EMAIL_ID=${{ secrets.MAILTRAP_TEMPLATE_VERIFICATION_EMAIL_ID }}
+          MAILTRAP_TEMPLATE_VERIFICATION_URL=${{ vars.MAILTRAP_TEMPLATE_VERIFICATION_URL }}
+
+          TOTP_GLOBAL_SECRET=${{ secrets.TOTP_GLOBAL_SECRET }}
+          TOTP_EXPIRY_IN_MINUTES=${{ vars.TOTP_EXPIRY_IN_MINUTES }}
           EOF
+
       - uses: actions/upload-artifact@v4
         with:
           include-hidden-files: true
-          name: env-${{ vars.SPRING_PROFILES_ACTIVE }}
-          path: .env.${{ vars.SPRING_PROFILES_ACTIVE }}
+          name: env-${{ vars.ENV }}
+          path: .env.${{ vars.ENV }}
 
   build:
     name: Build Docker Image
@@ -73,19 +101,21 @@ jobs:
     env:
       APP_IMAGE: ${{ needs.build.outputs.image-tag }}
       PROFILE: ${{ vars.SPRING_PROFILES_ACTIVE }}
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
-          name: env-${{ vars.SPRING_PROFILES_ACTIVE }}
+          name: env-${{ vars.ENV }}
       - uses: appleboy/scp-action@v0.1.0
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_SSH_PORT }}
-          source: "docker-compose.yml,docker-compose.prod.yml,.env.${{ vars.SPRING_PROFILES_ACTIVE }}"
+          source: "docker-compose.yml,docker-compose.prod.yml,.env.${{ vars.ENV }}"
           target: ~/minimart-api/
+
       - uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.VPS_HOST }}
