--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,7 +56,8 @@ jobs:
           TOTP_EXPIRY_IN_MINUTES=${{ vars.TOTP_EXPIRY_IN_MINUTES }}
           EOF
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload .env.${{ vars.ENV }} artifact
+        uses: actions/upload-artifact@v4
         with:
           include-hidden-files: true
           name: env-${{ vars.ENV }}
@@ -65,32 +66,70 @@ jobs:
   build:
     name: Build Docker Image
     runs-on: ubuntu-latest
+    environment: ${{ vars.ENV }}
     needs: create-env
     outputs:
       image-tag: ${{ steps.meta.outputs.tags }}
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup JDK
+        uses: actions/setup-java@v4
         with:
           java-version: 21
           distribution: temurin
           cache: maven
-      - id: get-version
-        run: echo "version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_OUTPUT
-      - id: meta
+
+      - name: Get Maven Project Version
+        id: get-version
+        run: |
+          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Get Maven Project Name
+        id: get-name
+        run: |
+          PROJECT_NAME=$(mvn help:evaluate -Dexpression=project.name -q -DforceStdout)
+          SAFE_NAME=$(echo "$PROJECT_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/ /-/g')
+          echo "name=$SAFE_NAME" >> $GITHUB_OUTPUT
+
+      - name: Extract Docker image metadata
+        id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}
+          images: ${{ vars.DOCKER_USERNAME }}/${{ steps.get-name.outputs.name }}
           tags: |
             ${{ vars.SPRING_PROFILES_ACTIVE }}-${{ steps.get-version.outputs.version }}-latest
-      - uses: docker/login-action@v3
+      
+
+      - name: Login Docker Hub
+        uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - uses: docker/build-push-action@v6
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Download .env.${{ vars.ENV }}
+        uses: actions/download-artifact@v4
         with:
-          push: true
+          name: env-${{ vars.ENV }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
+          annotations: ${{ steps.meta.outputs.annotations }}
+          build-args: |
+            PROFILE=${{ vars.SPRING_PROFILES_ACTIVE }}
+          file: Dockerfile
+          context: .
+          provenance: true
+          sbom: true
 
   deploy:
     name: Deploy to VPS
@@ -103,11 +142,16 @@ jobs:
       PROFILE: ${{ vars.SPRING_PROFILES_ACTIVE }}
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download .env.${{ vars.ENV }}
+        uses: actions/download-artifact@v4
         with:
           name: env-${{ vars.ENV }}
-      - uses: appleboy/scp-action@v0.1.0
+
+      - name: Copy Docker Compose files and env to VPS
+        uses: appleboy/scp-action@v0.1.0
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
@@ -116,7 +160,8 @@ jobs:
           source: "docker-compose.yml,docker-compose.prod.yml,.env.${{ vars.ENV }}"
           target: ~/minimart-api/
 
-      - uses: appleboy/ssh-action@v1
+      - name: Deploy
+        uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
