--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,16 +27,6 @@ jobs:
     name: Run Test
     runs-on: ubuntu-latest
     needs: compile
-    services:
-      redis:
-        image: redis:7-alpine
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -50,3 +40,12 @@ jobs:
 
       - name: Run Tests (Test Profile)
         run: mvn test -Ptest
+
+      - name: Generate Surefire Report
+        run: mvn surefire-report:report -Ptest
+
+      - name: Upload Surefire Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: surefire-report
+          path: target/site
